# tsq

./: Cargo.toml  build.rs  flake.nix
examples/: locales.scm
examples/mnoga/: locales.scm  terse.expected  verbose.expected
src/: format.rs  locales.scm  main.rs
src/format/: snippet.rs  terse.rs  verbose.rs
