[package]
name = "tsq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.20.9"
glob = "0.3.1"
libloading = "0.7"
annotate-snippets = { version = "0.9.1", features = ["color"] }
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
